correction in dropdown, add a collapse!

--- a/CODIGO_FACILILO/bootstrap/css/hojaDeVida.css
+++ b/CODIGO_FACILILO/bootstrap/css/hojaDeVida.css
@@ -12,7 +12,7 @@
 }
 
 .header-area .main-menu .dropdown-menu {
-	background: var(--light-coral);
+	background: var(--blue-light);
 	box-shadow: 0px 3px 16px 0px rgba(0,0,0,0.1);
 }
 
@@ -50,7 +50,7 @@
 	background-color: rgb(221, 213, 213);
 	padding-top: 28px;
 	padding-bottom: 28px;
-	box-shadow: 0px 20px 0px rgba(153, 153, 153, 0.3);
+	/* box-shadow: 0px 20px 0px rgba(153, 153, 153, 0.3); */
 }
 
 .main-info .container .img-col .img-container > img {
@@ -92,6 +92,11 @@
             |    SKILLS		|
 ==================================================
 */
+
+#skills {
+	background: -webkit-linear-gradient(0deg, var(--brown-leather) 0%, var(--light-coral));
+	border-radius: 10px;
+}
 .sect .container{
 	padding: 30px;
 }
@@ -120,7 +125,8 @@
 ==================================================
 */
 #portafolio {
-	background-color:#3155a7;
+	background: -webkit-linear-gradient(0deg, var(--blue-navy) 0%, var(--light-coral));
+	
 }
 
 .card-container .card {
@@ -143,5 +149,4 @@
 .card-container .card .btn:hover {
 	background: var(--light-coral);
 	color: var(--blue-navy);
-
 }
